[metadata]
name = task_helpers
version = attr: task_helpers.__version__
url = https://github.com/loievskyi/task_helpers
author = Viacheslav Loievskyi
author_email = loievskyi.slava@gmail.com
description = A package for creating task helpers.
license = BSD-3-Clause
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
project_urls =
    Source = https://github.com/loievskyi/task_helpers

[options]
python_requires = >=3.8
install_requires =
    redis
